1.24
 * Bug Fixes:
   * MP4/M4A: Fixed saving of atoms with 64-bit size on 64-bit platforms.

1.13 - 2007.12.03
 * Bug Fixes:
   * FLAC: Raise IOError, instead of UnboundLocalError, when trying
     to open a non-existant file. (Lukáš Lalinský, Debian #448734)
   * Throw out invalid frames when upgrading from 2.3 to 2.4.
   * Fixed reading of Unicode strings from ASF files on big-endian
     platforms.
 * TCP/TCMP support. (Debian #452231)
 * Faster implementation of file-writing when mmap fails, and
   exclusive advisory locking when available.
 * Test cases to ensure Mutagen is not vulnerable to CVE-2007-4619.
   It is not now, nor was it ever.
 * Use VBRI header to calculate length of VBR MP3 files if the Xing
   header is not found.

1.12 - 2007.08.04
 * Write important ID3v2 frames near the start. (Lukáš Lalinský)
 * Clean up distutils functions.

1.11 - 2007.04.26
 * New Features:
   * mid3v2 can now set URL frames. (Vladislav Naumov)
   * Musepack: Skip ID3v2 tags. (Lukáš Lalinský)
 * Bug Fixes:
   * mid3iconv: Skip all timestamp frames. (Lukáš Lalinský)
   * WavPack: More accurate length calculation. ('ak')
   * PairedTextFrame: Fix typo in documentation. (Lukáš Lalinský)
   * ID3: Fixed incorrect TDAT conversion. The format is DDMM, not
     MMDD. (Lukáš Lalinský)
 * API:
   * Metadata no longer inherits from dict.
   * Relatedly, the MRO has changed on several types.
   * More documentation for MP4 atoms. (Lukáš Lalinský)
   * Prefer MP3 for files with unknown extensions and ID3 tags.

1.10.1 - 2007.01.23
 * Bug Fixes:
   * Documentation mentions ASF support.
   * APEv2 flags and valid keys are fixed.
   * Tests pass on Python 2.3 again.

1.10 - 2007.01.21
 * New Features:
   * FLAC: Skip ID3 tags. Added option to delete them on save.
   * EncodedTextSpec: Make private members more private.
   * Corrupted Oggs generated by GStreamer (e.g. Sound Juicer) can be read.
   * FileTypes have a .mime attribute which is a list of likely MIME types