@@ -1,6 +1,8 @@
 1.24
  * Bug Fixes:
    * MP4/M4A: Fixed saving of atoms with 64-bit size on 64-bit platforms.
+ * Tests:
+   * FLAC: Use 2**64 instead of 2**32 to test overflow behavior.
 
 1.13 - 2007.12.03
  * Bug Fixes:
